Remove padding from #hero to solve responsivness issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,6 @@ h1, h2, h3 {
     height: 37.5rem;
     width: 100%;
     overflow: hidden;
-    padding: 1rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
